@startuml
package controllers {
    class ManagerController {

    }
    interface AuthenticationBase {

    }
    abstract class AuthenticationController<T extends JFrame> {

    }
    class LoginController {

    }
    class ForgotPasswordController {
    }
    class RegisterController {
    }
    interface MenuBarEvent {

    }
    class SidebarController {

    }
    abstract class DashboardController<T extends DashboardView> {

    }
    class AdminDashboardController {

    }
    class EmployeeDashboardController {

    }
    package admin {
        class CustomerManagerController {

        }

        class EmployeeManagerController {

        }
        class FoodCategoryManagerController {

        }
        class FoodItemManagerController {

        }
        class OrderManagerController {

        }
        class TableManagerController {

        }
        class ShipmentManagerController {

        }
    }
}
EmployeeDashboardController --|> DashboardController
AdminDashboardController o-- controllers.admin.EmployeeManagerController
AdminDashboardController o-- controllers.admin.FoodCategoryManagerController
AdminDashboardController o-- controllers.admin.FoodItemManagerController
AdminDashboardController o-- controllers.admin.TableManagerController
AdminDashboardController --|> DashboardController
DashboardController o-- controllers.admin.CustomerManagerController
DashboardController o-- controllers.admin.OrderManagerController
DashboardController o-- controllers.admin.ShipmentManagerController
DashboardController o-- controllers.employee.EmployeeInformationController
SidebarController *-- MenuBarEvent
RegisterController --|> AuthenticationController
ForgotPasswordController --|> AuthenticationController
LoginController --|> AuthenticationController
AuthenticationController ..|> AuthenticationBase
controllers.admin.CustomerManagerController --|> controllers.ManagerController
controllers.admin.EmployeeManagerController --|> controllers.ManagerController
controllers.admin.OrderManagerController --|> controllers.ManagerController
controllers.admin.ShipmentManagerController --|> controllers.ManagerController
controllers.admin.FoodCategoryManagerController --|> controllers.ManagerController
controllers.admin.FoodItemManagerController --|> controllers.ManagerController
controllers.admin.TableManagerController --|> controllers.ManagerController
controllers.admin.CustomerManagerController o-- controllers.popup.CustomerPopupController
controllers.admin.EmployeeManagerController o-- controllers.popup.EmployeePopupController
controllers.admin.OrderManagerController o-- controllers.popup.AddOrderPopupController
controllers.admin.OrderManagerController o-- controllers.popup.EditOrderPopupController
controllers.admin.FoodCategoryManagerController o-- controllers.popup.FoodCategoryPopupController
controllers.admin.FoodItemManagerController o-- controllers.popup.FoodItemPopupController
controllers.admin.TableManagerController o-- controllers.popup.TablePopupController
controllers.admin.ShipmentManagerController o-- controllers.popup.ShipmentPopupControler
@enduml